...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/search_button"
        android:layout_width="296dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="121dp"
        android:onClick="OnSearchClicked"
        android:text="Search exhibits"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/view_exhibits_button"
        android:layout_width="296dp"
        android:layout_height="40dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="517dp"
        android:onClick="OnViewExhibitsClicked"
        android:text="View exhibits list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />



    <Button
        android:id="@+id/Directionbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnDirectionClicked"
        android:text="Directions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <Button
        android:id="@+id/Route_plan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnRoutePlanClicked"
        android:text="Route Plan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />
...
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="75dp"
        android:text="ROUTE OVERVIEW:"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
...
