...
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:layout_marginVertical="30dp"
    tools:context=".RoutePlanActivity">

    <TextView
        android:id="@+id/route_overview_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ROUTE OVERVIEW"
        android:textColor="@color/black"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/home_btn_route_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="returnToHome"
        android:text="     Home     "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
