<resources>
    <string name="app_name">Group13ZooSearch</string>
    <string name="map_key">AIzaSyBkHgMp0TMG3inSiXVEfLbiX5gxcn3hqZM</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>